# onchainGnomes

./: .env  .env.example  .env.oauth2.example  .gitignore  .renderignore  Dockerfile  Dockerfile.node  HARDENING_REPORT.md  LLM_TESTING_HOWTO.md  README.md  Refresh-XAccessToken.ps1  docker-compose.yml  docker-compose.yml.legacy  package-lock.json  package.json  package.json.incoming  package.json.merge-note.md  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements.txt.legacy  tsconfig.json  vitest.config.ts  x-gnome-tokens.json
.upgrade/: GROK_meta-Engine.md  MATHEMATISCHE-GESAMTFORMEL.md  Onchain-Forensic-Intelligence-Engine.md  README.md  ReducedMode_Failure-Resilient_Cross-DEX.md  User-Intent-nlp.md  bci-mci.md  engine_v_4.md
config/: default.yaml  gorky.yaml  gorkypf.yaml
data/: audit_log.jsonl  budget.json  cursor_state.json  event_state.json  processed_mentions.json  published.json
data/gnomes/: erzlauscher.yaml  glutkern.yaml  muenzhueter.yaml  nebelspieler.yaml  pilzarchitekt.yaml  stillhalter.yaml  wurzelwaechter.yaml
docs/: LORE.md  LORE_GORKY.md  PERSONA.md  PHASE1_LAUNCH_SAFETY.md  QUICKSTART.md  README.md  RUN.md  VOICE_MATRIX_GORKY.md  var.README.md
docs/appendix/: GORKY_HUMOR_PATTERNS.md
docs/changelog/: CHANGELOG.md
schemas/: gnome_profile.schema.json
scripts/: _x_smoke.ts  check_auth.ts  cliPromptBridge.ts  debug_mentions.ts  poll_mentions.ts  simulateConversation.ts  test_llm_pipeline.ts  test_poll_logic.ts  test_random_responses.ts
src/: index.ts  server.ts
state/: .gitignore  README.md
tests/: __init__.py  test_brand_matrix.py
(+285 files in other folders)
