[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xai-bot-app"
version = "0.1.0"
description = "Autonomous X (Twitter) AI Agent Backend"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "xAi Bot Team"}]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.19",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "httpx>=0.25",
    "requests-oauthlib>=1.3",
    "prometheus-client>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
]

[project.scripts]
xai-bot = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__"]
